--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
           <div class="col">
             <div
               id="carouselExampleCaptions"
-              class="carousel slide"
+              class="carousel slide shadow"
               data-ride="carousel"
             >
               <ol class="carousel-indicators">
