--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- Main Css -->
     <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="./blobButton.css" />
+    <!-- <link rel="stylesheet" href="./blobButton.css" /> -->
 
     <title>Hello, world!</title>
   </head>
@@ -81,12 +81,14 @@
     <div class="hero">
       <div class="container">
         <div class="row">
-          <div class="col-12 col-md-4 m-auto p-2 bg-glow">
-            <img
-              src="./pic.jpg"
-              alt="pulkit singh"
-              class="rounded-pill img-fluid"
-            />
+          <div class="col-12 col-md-4">
+            <div class="m-auto p-2 bg-glow">
+              <img
+                src="./pic.jpg"
+                alt="pulkit singh"
+                class="rounded-pill img-fluid"
+              />
+            </div>
           </div>
           <div class="col-12 col-md-7 my-auto">
             <h6 class="p-1" style="color: #e4cb58">Hello World !</h6>
@@ -97,48 +99,7 @@
               felis, ut venenatis purus ex eu mi. Quisque imperdiet lacinia
               urna, a placerat sapien pretium eu.
             </h6>
-            <style>
-              /* button {
-                position: relative;
-                display: inline-block;
-                cursor: pointer;
-                outline: none;
-                border: 0;
-                vertical-align: middle;
-                text-decoration: none;
-                font-size: inherit;
-                font-family: inherit;
-              }
-              button.learn-more {
-                -webkit-transition: all 0.5s
-                  cubic-bezier(0.65, -0.25, 0.25, 1.95);
-                transition: all 0.5s cubic-bezier(0.65, -0.25, 0.25, 1.95);
-                font-weight: 900;
-                color: #202121;
-                padding: 1.25rem 2rem;
-                background: #fff;
-                text-transform: uppercase;
-              }
-              button.learn-more:hover,
-              button.learn-more:focus,
-              button.learn-more:active {
-                letter-spacing: 0.125rem;
-              }
-
-              @supports (display: grid) {
-                #btn-container {
-                  grid-area: main;
-                  align-self: center;
-                  justify-self: center;
-                }
-              } */
-            </style>
-
-            <!-- <div class="text-center" id="btn-container">
-              <button class="learn-more">Learn More</button>
-            </div> -->
-
-            <div class="buttons p-2">
+            <!-- <div class="buttons p-2">
               <button class="blob-btn">
                 Blob Button
                 <span class="blob-btn__inner">
@@ -150,7 +111,7 @@
                   </span>
                 </span>
               </button>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
